// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddDraftAction add already open Foo 1`] = `
Object {
  "activeEntityEditorScrollSignal": 2,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 2,
  "drafts": Array [
    Object {
      "draft": Object {
        "authKey": "none",
        "entitySpec": Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": Array [
          Object {
            "fieldSpec": Object {
              "name": "title",
              "type": "String",
            },
            "normalizedValue": null,
            "status": "",
            "value": null,
          },
        ],
        "name": "Foo",
      },
      "entity": Object {
        "fields": Object {
          "foo": null,
        },
        "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
        "info": Object {
          "authKey": "none",
          "createdAt": "2022-04-30T07:51:25.56Z",
          "name": "Foo",
          "status": "draft",
          "type": "Foo",
          "updatedAt": "2022-05-01T07:51:25.56Z",
          "version": 0,
        },
      },
      "entityWillBeUpdatedDueToUpsert": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "spec": Object {
      "entityTypes": Array [
        Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "valueTypes": Array [],
    },
  },
  "status": "",
}
`;

exports[`AddDraftAction add new Foo 1`] = `
Object {
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": Array [
    Object {
      "draft": Object {
        "authKey": null,
        "entitySpec": Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": Array [
          Object {
            "fieldSpec": Object {
              "name": "title",
              "type": "String",
            },
            "normalizedValue": null,
            "status": "",
            "value": null,
          },
        ],
        "name": "",
      },
      "entity": null,
      "entityWillBeUpdatedDueToUpsert": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "spec": Object {
      "entityTypes": Array [
        Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "valueTypes": Array [],
    },
  },
  "status": "",
}
`;

exports[`DeleteDraftAction add/delete Foo 1`] = `
Object {
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": null,
  "activeEntityMenuScrollSignal": 1,
  "drafts": Array [],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "spec": Object {
      "entityTypes": Array [
        Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "valueTypes": Array [],
    },
  },
  "status": "",
}
`;

exports[`EntityEditorReducer scenarios add new draft, set name and authKey, force update 1`] = `
Object {
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": Array [
    Object {
      "draft": Object {
        "authKey": null,
        "entitySpec": Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": Array [
          Object {
            "fieldSpec": Object {
              "name": "title",
              "type": "String",
            },
            "normalizedValue": null,
            "status": "",
            "value": null,
          },
        ],
        "name": "",
      },
      "entity": null,
      "entityWillBeUpdatedDueToUpsert": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "spec": Object {
      "entityTypes": Array [
        Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "valueTypes": Array [],
    },
  },
  "status": "",
}
`;

exports[`EntityEditorReducer scenarios add new draft, set name and authKey, force update 2`] = `
Object {
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": Array [
    Object {
      "draft": Object {
        "authKey": null,
        "entitySpec": Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": Array [
          Object {
            "fieldSpec": Object {
              "name": "title",
              "type": "String",
            },
            "normalizedValue": null,
            "status": "",
            "value": null,
          },
        ],
        "name": "Foo name",
      },
      "entity": null,
      "entityWillBeUpdatedDueToUpsert": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "spec": Object {
      "entityTypes": Array [
        Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "valueTypes": Array [],
    },
  },
  "status": "",
}
`;

exports[`EntityEditorReducer scenarios add new draft, set name and authKey, force update 3`] = `
Object {
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": Array [
    Object {
      "draft": Object {
        "authKey": "none",
        "entitySpec": Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": Array [
          Object {
            "fieldSpec": Object {
              "name": "title",
              "type": "String",
            },
            "normalizedValue": null,
            "status": "",
            "value": null,
          },
        ],
        "name": "Foo name",
      },
      "entity": null,
      "entityWillBeUpdatedDueToUpsert": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "changed",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "spec": Object {
      "entityTypes": Array [
        Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "valueTypes": Array [],
    },
  },
  "status": "changed",
}
`;

exports[`EntityEditorReducer scenarios add new draft, set name and authKey, force update 4`] = `
Object {
  "fields": Object {
    "title": null,
  },
  "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "info": Object {
    "authKey": "none",
    "name": "Foo name",
    "type": "Foo",
  },
}
`;

exports[`EntityEditorReducer scenarios add new draft, set name and authKey, force update 5`] = `
Object {
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": Array [
    Object {
      "draft": Object {
        "authKey": "none",
        "entitySpec": Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": Array [
          Object {
            "fieldSpec": Object {
              "name": "title",
              "type": "String",
            },
            "normalizedValue": null,
            "status": "",
            "value": null,
          },
        ],
        "name": "Foo name",
      },
      "entity": null,
      "entityWillBeUpdatedDueToUpsert": true,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "changed",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "spec": Object {
      "entityTypes": Array [
        Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "valueTypes": Array [],
    },
  },
  "status": "changed",
}
`;

exports[`EntityEditorReducer scenarios add new draft, set name and authKey, force update 6`] = `
Object {
  "activeEntityEditorScrollSignal": 2,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 2,
  "drafts": Array [
    Object {
      "draft": Object {
        "authKey": "none",
        "entitySpec": Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": Array [
          Object {
            "fieldSpec": Object {
              "name": "title",
              "type": "String",
            },
            "normalizedValue": null,
            "status": "",
            "value": null,
          },
        ],
        "name": "Foo name#123456",
      },
      "entity": Object {
        "fields": Object {
          "title": null,
        },
        "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
        "info": Object {
          "authKey": "none",
          "createdAt": "2022-04-30T07:51:25.56Z",
          "name": "Foo name#123456",
          "status": "draft",
          "type": "Foo",
          "updatedAt": "2022-04-30T07:51:25.56Z",
          "version": 0,
        },
      },
      "entityWillBeUpdatedDueToUpsert": true,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "spec": Object {
      "entityTypes": Array [
        Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "valueTypes": Array [],
    },
  },
  "status": "",
}
`;

exports[`EntityEditorReducer scenarios add new draft, set name, authKey and title, simulate save 1`] = `
Object {
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": Array [
    Object {
      "draft": Object {
        "authKey": null,
        "entitySpec": Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": Array [
          Object {
            "fieldSpec": Object {
              "name": "title",
              "type": "String",
            },
            "normalizedValue": null,
            "status": "",
            "value": null,
          },
        ],
        "name": "",
      },
      "entity": null,
      "entityWillBeUpdatedDueToUpsert": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "spec": Object {
      "entityTypes": Array [
        Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "valueTypes": Array [],
    },
  },
  "status": "",
}
`;

exports[`EntityEditorReducer scenarios add new draft, set name, authKey and title, simulate save 2`] = `
Object {
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": Array [
    Object {
      "draft": Object {
        "authKey": null,
        "entitySpec": Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": Array [
          Object {
            "fieldSpec": Object {
              "name": "title",
              "type": "String",
            },
            "normalizedValue": null,
            "status": "",
            "value": null,
          },
        ],
        "name": "Foo name",
      },
      "entity": null,
      "entityWillBeUpdatedDueToUpsert": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "spec": Object {
      "entityTypes": Array [
        Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "valueTypes": Array [],
    },
  },
  "status": "",
}
`;

exports[`EntityEditorReducer scenarios add new draft, set name, authKey and title, simulate save 3`] = `
Object {
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": Array [
    Object {
      "draft": Object {
        "authKey": "none",
        "entitySpec": Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": Array [
          Object {
            "fieldSpec": Object {
              "name": "title",
              "type": "String",
            },
            "normalizedValue": null,
            "status": "",
            "value": null,
          },
        ],
        "name": "Foo name",
      },
      "entity": null,
      "entityWillBeUpdatedDueToUpsert": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "changed",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "spec": Object {
      "entityTypes": Array [
        Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "valueTypes": Array [],
    },
  },
  "status": "changed",
}
`;

exports[`EntityEditorReducer scenarios add new draft, set name, authKey and title, simulate save 4`] = `
Object {
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": Array [
    Object {
      "draft": Object {
        "authKey": "none",
        "entitySpec": Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": Array [
          Object {
            "fieldSpec": Object {
              "name": "title",
              "type": "String",
            },
            "normalizedValue": "Foo title",
            "status": "changed",
            "value": "Foo title",
          },
        ],
        "name": "Foo name",
      },
      "entity": null,
      "entityWillBeUpdatedDueToUpsert": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "changed",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "spec": Object {
      "entityTypes": Array [
        Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "valueTypes": Array [],
    },
  },
  "status": "changed",
}
`;

exports[`EntityEditorReducer scenarios add new draft, set name, authKey and title, simulate save 5`] = `
Object {
  "fields": Object {
    "title": "Foo title",
  },
  "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "info": Object {
    "authKey": "none",
    "name": "Foo name",
    "type": "Foo",
  },
}
`;

exports[`EntityEditorReducer scenarios add new draft, set name, authKey and title, simulate save 6`] = `
Object {
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": Array [
    Object {
      "draft": Object {
        "authKey": "none",
        "entitySpec": Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": Array [
          Object {
            "fieldSpec": Object {
              "name": "title",
              "type": "String",
            },
            "normalizedValue": "Foo title",
            "status": "changed",
            "value": "Foo title",
          },
        ],
        "name": "Foo name",
      },
      "entity": null,
      "entityWillBeUpdatedDueToUpsert": true,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "changed",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "spec": Object {
      "entityTypes": Array [
        Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "valueTypes": Array [],
    },
  },
  "status": "changed",
}
`;

exports[`EntityEditorReducer scenarios add new draft, set name, authKey and title, simulate save 7`] = `
Object {
  "activeEntityEditorScrollSignal": 2,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 2,
  "drafts": Array [
    Object {
      "draft": Object {
        "authKey": "none",
        "entitySpec": Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": Array [
          Object {
            "fieldSpec": Object {
              "name": "title",
              "type": "String",
            },
            "normalizedValue": "Foo title",
            "status": "",
            "value": "Foo title",
          },
        ],
        "name": "Foo name#123456",
      },
      "entity": Object {
        "fields": Object {
          "title": "Foo title",
        },
        "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
        "info": Object {
          "authKey": "none",
          "createdAt": "2022-04-30T07:51:25.56Z",
          "name": "Foo name#123456",
          "status": "draft",
          "type": "Foo",
          "updatedAt": "2022-04-30T07:51:25.56Z",
          "version": 0,
        },
      },
      "entityWillBeUpdatedDueToUpsert": true,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "spec": Object {
      "entityTypes": Array [
        Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "valueTypes": Array [],
    },
  },
  "status": "",
}
`;

exports[`EntityEditorReducer scenarios open existing entity, set title field, simulate save 1`] = `
Object {
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": Array [
    Object {
      "draft": Object {
        "authKey": "none",
        "entitySpec": Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": Array [
          Object {
            "fieldSpec": Object {
              "name": "title",
              "type": "String",
            },
            "normalizedValue": "Existing title",
            "status": "",
            "value": "Existing title",
          },
        ],
        "name": "Foo name#123456",
      },
      "entity": Object {
        "fields": Object {
          "title": "Existing title",
        },
        "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
        "info": Object {
          "authKey": "none",
          "createdAt": "2022-04-30T07:51:25.56Z",
          "name": "Foo name#123456",
          "status": "draft",
          "type": "Foo",
          "updatedAt": "2022-04-30T07:51:25.56Z",
          "version": 0,
        },
      },
      "entityWillBeUpdatedDueToUpsert": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "spec": Object {
      "entityTypes": Array [
        Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "valueTypes": Array [],
    },
  },
  "status": "",
}
`;

exports[`EntityEditorReducer scenarios open existing entity, set title field, simulate save 2`] = `
Object {
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": Array [
    Object {
      "draft": Object {
        "authKey": "none",
        "entitySpec": Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": Array [
          Object {
            "fieldSpec": Object {
              "name": "title",
              "type": "String",
            },
            "normalizedValue": "New title",
            "status": "changed",
            "value": "New title",
          },
        ],
        "name": "Foo name#123456",
      },
      "entity": Object {
        "fields": Object {
          "title": "Existing title",
        },
        "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
        "info": Object {
          "authKey": "none",
          "createdAt": "2022-04-30T07:51:25.56Z",
          "name": "Foo name#123456",
          "status": "draft",
          "type": "Foo",
          "updatedAt": "2022-04-30T07:51:25.56Z",
          "version": 0,
        },
      },
      "entityWillBeUpdatedDueToUpsert": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "changed",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "spec": Object {
      "entityTypes": Array [
        Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "valueTypes": Array [],
    },
  },
  "status": "changed",
}
`;

exports[`EntityEditorReducer scenarios open existing entity, set title field, simulate save 3`] = `
Object {
  "fields": Object {
    "title": "New title",
  },
  "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "info": Object {
    "type": "Foo",
  },
}
`;

exports[`EntityEditorReducer scenarios open existing entity, set title field, simulate save 4`] = `
Object {
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": Array [
    Object {
      "draft": Object {
        "authKey": "none",
        "entitySpec": Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": Array [
          Object {
            "fieldSpec": Object {
              "name": "title",
              "type": "String",
            },
            "normalizedValue": "New title",
            "status": "changed",
            "value": "New title",
          },
        ],
        "name": "Foo name#123456",
      },
      "entity": Object {
        "fields": Object {
          "title": "Existing title",
        },
        "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
        "info": Object {
          "authKey": "none",
          "createdAt": "2022-04-30T07:51:25.56Z",
          "name": "Foo name#123456",
          "status": "draft",
          "type": "Foo",
          "updatedAt": "2022-04-30T07:51:25.56Z",
          "version": 0,
        },
      },
      "entityWillBeUpdatedDueToUpsert": true,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "changed",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "spec": Object {
      "entityTypes": Array [
        Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "valueTypes": Array [],
    },
  },
  "status": "changed",
}
`;

exports[`EntityEditorReducer scenarios open existing entity, set title field, simulate save 5`] = `
Object {
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": Array [
    Object {
      "draft": Object {
        "authKey": "none",
        "entitySpec": Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": Array [
          Object {
            "fieldSpec": Object {
              "name": "title",
              "type": "String",
            },
            "normalizedValue": "New title",
            "status": "",
            "value": "New title",
          },
        ],
        "name": "Foo name#123456",
      },
      "entity": Object {
        "fields": Object {
          "title": "New title",
        },
        "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
        "info": Object {
          "authKey": "none",
          "createdAt": "2022-04-30T07:51:25.56Z",
          "name": "Foo name#123456",
          "status": "draft",
          "type": "Foo",
          "updatedAt": "2022-05-01T07:51:25.56Z",
          "version": 1,
        },
      },
      "entityWillBeUpdatedDueToUpsert": true,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "spec": Object {
      "entityTypes": Array [
        Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "valueTypes": Array [],
    },
  },
  "status": "",
}
`;

exports[`EntityEditorReducer scenarios open existing entity, simulate publish 1`] = `
Object {
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": Array [
    Object {
      "draft": Object {
        "authKey": "none",
        "entitySpec": Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": Array [
          Object {
            "fieldSpec": Object {
              "name": "title",
              "type": "String",
            },
            "normalizedValue": "Existing title",
            "status": "",
            "value": "Existing title",
          },
        ],
        "name": "Foo name#123456",
      },
      "entity": Object {
        "fields": Object {
          "title": "Existing title",
        },
        "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
        "info": Object {
          "authKey": "none",
          "createdAt": "2022-04-30T07:51:25.56Z",
          "name": "Foo name#123456",
          "status": "draft",
          "type": "Foo",
          "updatedAt": "2022-04-30T07:51:25.56Z",
          "version": 0,
        },
      },
      "entityWillBeUpdatedDueToUpsert": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "spec": Object {
      "entityTypes": Array [
        Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "valueTypes": Array [],
    },
  },
  "status": "",
}
`;

exports[`EntityEditorReducer scenarios open existing entity, simulate publish 2`] = `
Object {
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": Array [
    Object {
      "draft": Object {
        "authKey": "none",
        "entitySpec": Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": Array [
          Object {
            "fieldSpec": Object {
              "name": "title",
              "type": "String",
            },
            "normalizedValue": "Existing title",
            "status": "",
            "value": "Existing title",
          },
        ],
        "name": "Foo name#123456",
      },
      "entity": Object {
        "fields": Object {
          "title": "Existing title",
        },
        "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
        "info": Object {
          "authKey": "none",
          "createdAt": "2022-04-30T07:51:25.56Z",
          "name": "Foo name#123456",
          "status": "published",
          "type": "Foo",
          "updatedAt": "2022-05-01T07:51:25.56Z",
          "version": 0,
        },
      },
      "entityWillBeUpdatedDueToUpsert": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "spec": Object {
      "entityTypes": Array [
        Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "valueTypes": Array [],
    },
  },
  "status": "",
}
`;

exports[`EntityEditorReducer scenarios open existing, get schema 1`] = `
Object {
  "activeEntityEditorScrollSignal": 0,
  "activeEntityId": null,
  "activeEntityMenuScrollSignal": 0,
  "drafts": Array [],
  "pendingSchemaActions": Array [
    AddDraftAction {
      "selector": Object {
        "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      },
    },
  ],
  "schema": null,
  "status": "",
}
`;

exports[`EntityEditorReducer scenarios open existing, get schema 2`] = `
Object {
  "activeEntityEditorScrollSignal": 0,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 0,
  "drafts": Array [
    Object {
      "draft": null,
      "entity": null,
      "entityWillBeUpdatedDueToUpsert": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "spec": Object {
      "entityTypes": Array [
        Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "valueTypes": Array [],
    },
  },
  "status": "",
}
`;

exports[`EntityEditorReducer scenarios open existing, get schema 3`] = `
Object {
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": Array [
    Object {
      "draft": Object {
        "authKey": "none",
        "entitySpec": Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": Array [
          Object {
            "fieldSpec": Object {
              "name": "title",
              "type": "String",
            },
            "normalizedValue": null,
            "status": "",
            "value": null,
          },
        ],
        "name": "Foo name#123456",
      },
      "entity": Object {
        "fields": Object {
          "title": null,
        },
        "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
        "info": Object {
          "authKey": "none",
          "createdAt": "2022-04-30T07:51:25.56Z",
          "name": "Foo name#123456",
          "status": "draft",
          "type": "Foo",
          "updatedAt": "2022-04-30T07:51:25.56Z",
          "version": 0,
        },
      },
      "entityWillBeUpdatedDueToUpsert": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "spec": Object {
      "entityTypes": Array [
        Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "valueTypes": Array [],
    },
  },
  "status": "",
}
`;

exports[`EntityEditorReducer scenarios open first entity, open second entity: 1 Initial 1`] = `
Object {
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": Array [
    Object {
      "draft": Object {
        "authKey": "none",
        "entitySpec": Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "foo",
              "type": "EntityType",
            },
          ],
          "name": "Foo",
        },
        "fields": Array [
          Object {
            "fieldSpec": Object {
              "name": "foo",
              "type": "EntityType",
            },
            "normalizedValue": Object {
              "id": "af83fa2d-e05c-49ef-9e31-61e6472c1f28",
            },
            "status": "",
            "value": Object {
              "id": "af83fa2d-e05c-49ef-9e31-61e6472c1f28",
            },
          },
        ],
        "name": "Foo name#123456",
      },
      "entity": Object {
        "fields": Object {
          "foo": Object {
            "id": "af83fa2d-e05c-49ef-9e31-61e6472c1f28",
          },
        },
        "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
        "info": Object {
          "authKey": "none",
          "createdAt": "2022-04-30T07:51:25.56Z",
          "name": "Foo name#123456",
          "status": "draft",
          "type": "Foo",
          "updatedAt": "2022-04-30T07:51:25.56Z",
          "version": 0,
        },
      },
      "entityWillBeUpdatedDueToUpsert": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "spec": Object {
      "entityTypes": Array [
        Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "foo",
              "type": "EntityType",
            },
          ],
          "name": "Foo",
        },
      ],
      "valueTypes": Array [],
    },
  },
  "status": "",
}
`;

exports[`EntityEditorReducer scenarios open first entity, open second entity: 2 After AddDraft 1`] = `
Object {
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "af83fa2d-e05c-49ef-9e31-61e6472c1f28",
  "activeEntityMenuScrollSignal": 1,
  "drafts": Array [
    Object {
      "draft": Object {
        "authKey": "none",
        "entitySpec": Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "foo",
              "type": "EntityType",
            },
          ],
          "name": "Foo",
        },
        "fields": Array [
          Object {
            "fieldSpec": Object {
              "name": "foo",
              "type": "EntityType",
            },
            "normalizedValue": Object {
              "id": "af83fa2d-e05c-49ef-9e31-61e6472c1f28",
            },
            "status": "",
            "value": Object {
              "id": "af83fa2d-e05c-49ef-9e31-61e6472c1f28",
            },
          },
        ],
        "name": "Foo name#123456",
      },
      "entity": Object {
        "fields": Object {
          "foo": Object {
            "id": "af83fa2d-e05c-49ef-9e31-61e6472c1f28",
          },
        },
        "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
        "info": Object {
          "authKey": "none",
          "createdAt": "2022-04-30T07:51:25.56Z",
          "name": "Foo name#123456",
          "status": "draft",
          "type": "Foo",
          "updatedAt": "2022-04-30T07:51:25.56Z",
          "version": 0,
        },
      },
      "entityWillBeUpdatedDueToUpsert": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "",
    },
    Object {
      "draft": null,
      "entity": null,
      "entityWillBeUpdatedDueToUpsert": false,
      "id": "af83fa2d-e05c-49ef-9e31-61e6472c1f28",
      "status": "",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "spec": Object {
      "entityTypes": Array [
        Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "foo",
              "type": "EntityType",
            },
          ],
          "name": "Foo",
        },
      ],
      "valueTypes": Array [],
    },
  },
  "status": "",
}
`;

exports[`EntityEditorReducer scenarios open first entity, open second entity: 3 After UpdateEntity 1`] = `
Object {
  "activeEntityEditorScrollSignal": 2,
  "activeEntityId": "af83fa2d-e05c-49ef-9e31-61e6472c1f28",
  "activeEntityMenuScrollSignal": 2,
  "drafts": Array [
    Object {
      "draft": Object {
        "authKey": "none",
        "entitySpec": Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "foo",
              "type": "EntityType",
            },
          ],
          "name": "Foo",
        },
        "fields": Array [
          Object {
            "fieldSpec": Object {
              "name": "foo",
              "type": "EntityType",
            },
            "normalizedValue": Object {
              "id": "af83fa2d-e05c-49ef-9e31-61e6472c1f28",
            },
            "status": "",
            "value": Object {
              "id": "af83fa2d-e05c-49ef-9e31-61e6472c1f28",
            },
          },
        ],
        "name": "Foo name#123456",
      },
      "entity": Object {
        "fields": Object {
          "foo": Object {
            "id": "af83fa2d-e05c-49ef-9e31-61e6472c1f28",
          },
        },
        "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
        "info": Object {
          "authKey": "none",
          "createdAt": "2022-04-30T07:51:25.56Z",
          "name": "Foo name#123456",
          "status": "draft",
          "type": "Foo",
          "updatedAt": "2022-04-30T07:51:25.56Z",
          "version": 0,
        },
      },
      "entityWillBeUpdatedDueToUpsert": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "",
    },
    Object {
      "draft": Object {
        "authKey": "none",
        "entitySpec": Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "foo",
              "type": "EntityType",
            },
          ],
          "name": "Foo",
        },
        "fields": Array [
          Object {
            "fieldSpec": Object {
              "name": "foo",
              "type": "EntityType",
            },
            "normalizedValue": null,
            "status": "",
            "value": null,
          },
        ],
        "name": "Foo 2",
      },
      "entity": Object {
        "fields": Object {
          "foo": null,
        },
        "id": "af83fa2d-e05c-49ef-9e31-61e6472c1f28",
        "info": Object {
          "authKey": "none",
          "createdAt": "2022-04-30T07:51:25.56Z",
          "name": "Foo 2",
          "status": "draft",
          "type": "Foo",
          "updatedAt": "2022-05-01T07:51:25.56Z",
          "version": 0,
        },
      },
      "entityWillBeUpdatedDueToUpsert": false,
      "id": "af83fa2d-e05c-49ef-9e31-61e6472c1f28",
      "status": "",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "spec": Object {
      "entityTypes": Array [
        Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "foo",
              "type": "EntityType",
            },
          ],
          "name": "Foo",
        },
      ],
      "valueTypes": Array [],
    },
  },
  "status": "",
}
`;

exports[`SetActiveEntityAction add two entities, set active to first 1`] = `
Object {
  "activeEntityEditorScrollSignal": 3,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 3,
  "drafts": Array [
    Object {
      "draft": Object {
        "authKey": null,
        "entitySpec": Object {
          "adminOnly": false,
          "fields": Array [],
          "name": "Foo",
        },
        "fields": Array [],
        "name": "",
      },
      "entity": null,
      "entityWillBeUpdatedDueToUpsert": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "",
    },
    Object {
      "draft": Object {
        "authKey": null,
        "entitySpec": Object {
          "adminOnly": false,
          "fields": Array [],
          "name": "Bar",
        },
        "fields": Array [],
        "name": "",
      },
      "entity": null,
      "entityWillBeUpdatedDueToUpsert": false,
      "id": "9516465b-935a-4cc7-8b97-ccaca81bbe9a",
      "status": "",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "spec": Object {
      "entityTypes": Array [
        Object {
          "adminOnly": false,
          "fields": Array [],
          "name": "Foo",
        },
        Object {
          "adminOnly": false,
          "fields": Array [],
          "name": "Bar",
        },
      ],
      "valueTypes": Array [],
    },
  },
  "status": "",
}
`;

exports[`SetAuthKeyAction set authKey of new draft 1`] = `
Object {
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": Array [
    Object {
      "draft": Object {
        "authKey": "subject",
        "entitySpec": Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": Array [
          Object {
            "fieldSpec": Object {
              "name": "title",
              "type": "String",
            },
            "normalizedValue": null,
            "status": "",
            "value": null,
          },
        ],
        "name": "",
      },
      "entity": null,
      "entityWillBeUpdatedDueToUpsert": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "changed",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "spec": Object {
      "entityTypes": Array [
        Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "valueTypes": Array [],
    },
  },
  "status": "changed",
}
`;

exports[`SetFieldAction set title field of new draft 1`] = `
Object {
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": Array [
    Object {
      "draft": Object {
        "authKey": null,
        "entitySpec": Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": Array [
          Object {
            "fieldSpec": Object {
              "name": "title",
              "type": "String",
            },
            "normalizedValue": "New title",
            "status": "changed",
            "value": "New title",
          },
        ],
        "name": "",
      },
      "entity": null,
      "entityWillBeUpdatedDueToUpsert": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "changed",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "spec": Object {
      "entityTypes": Array [
        Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "valueTypes": Array [],
    },
  },
  "status": "changed",
}
`;

exports[`SetNameAction set name of new draft 1`] = `
Object {
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": Array [
    Object {
      "draft": Object {
        "authKey": null,
        "entitySpec": Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": Array [
          Object {
            "fieldSpec": Object {
              "name": "title",
              "type": "String",
            },
            "normalizedValue": null,
            "status": "",
            "value": null,
          },
        ],
        "name": "New name",
      },
      "entity": null,
      "entityWillBeUpdatedDueToUpsert": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "spec": Object {
      "entityTypes": Array [
        Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "valueTypes": Array [],
    },
  },
  "status": "",
}
`;

exports[`UpdateEntityAction add draft, update entity 1`] = `
Object {
  "activeEntityEditorScrollSignal": 1,
  "activeEntityId": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "activeEntityMenuScrollSignal": 1,
  "drafts": Array [
    Object {
      "draft": Object {
        "authKey": "none",
        "entitySpec": Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
        "fields": Array [
          Object {
            "fieldSpec": Object {
              "name": "title",
              "type": "String",
            },
            "normalizedValue": "Title",
            "status": "",
            "value": "Title",
          },
        ],
        "name": "Foo name",
      },
      "entity": Object {
        "fields": Object {
          "title": "Title",
        },
        "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
        "info": Object {
          "authKey": "none",
          "createdAt": "2022-04-30T07:51:25.56Z",
          "name": "Foo name",
          "status": "draft",
          "type": "Foo",
          "updatedAt": "2022-04-30T07:51:25.56Z",
          "version": 0,
        },
      },
      "entityWillBeUpdatedDueToUpsert": false,
      "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
      "status": "",
    },
  ],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "spec": Object {
      "entityTypes": Array [
        Object {
          "adminOnly": false,
          "fields": Array [
            Object {
              "name": "title",
              "type": "String",
            },
          ],
          "name": "Foo",
        },
      ],
      "valueTypes": Array [],
    },
  },
  "status": "",
}
`;

exports[`UpdateEntityAction add draft, update entity 2`] = `
Object {
  "fields": Object {
    "title": "Title",
  },
  "id": "619725d7-e583-4544-8bb0-23fc3c2870c0",
  "info": Object {
    "type": "Foo",
  },
}
`;

exports[`UpdateSchemaSpecificationAction add empty schema 1`] = `
Object {
  "activeEntityEditorScrollSignal": 0,
  "activeEntityId": null,
  "activeEntityMenuScrollSignal": 0,
  "drafts": Array [],
  "pendingSchemaActions": null,
  "schema": AdminSchema {
    "spec": Object {
      "entityTypes": Array [],
      "valueTypes": Array [],
    },
  },
  "status": "",
}
`;
